[package]
name = "steam-master-server-implementation"
authors = ["rtldg <rtldg@protonmail.com>"]
description = "Implementation of the Steam Master Server for game servers"
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/rtldg/steam-master-server-implementation"
repository = "https://github.com/rtldg/steam-master-server-implementation"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
rand = "0.9.0"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.27", features = ["bundled"] }
jiff = "0.2.5"
